Refactor .gitignore to improve clarity and remove unnecessary comments; delete .env file for security reasons

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,9 @@
-# Created by venv; see https://docs.python.org/3/library/venv.html
+# Ignore virtual environment folder
 venv/
-# Environments
+
+# Ignore environment variable file
 .env
+
+# Optional: Bytecode files
+__pycache__/
+*.pyc
